--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "A simple quizlet game",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Thuan Vo",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.25.0",
     "chalk": "^5.0.0",
     "chalk-animation": "^1.6.0",
     "figlet": "^1.5.2",
