--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js_cli",
+  "name": "js_quiz_game",
   "version": "1.0.0",
   "description": "A simple quizlet game",
   "main": "index.js",
